# cybercapstone

./:  file_scanner.h  .gitignore  CMakeLists.txt  Group1_Report.htm  ScanHistoryManager.cpp  ScanHistoryManager.h  ScanRecord.h  Threat.h  acceptance_test  acceptance_test.cpp  analyzer.cpp  cppcheck_output.txt  evil_payload.sh  file_scanner.cpp  index.html  kill_process.cpp  kill_process.h  main.cpp  main.js  output for quarantine functions  output for unit tests  output of scanner   package.json  pid_config.cpp  pid_helpers.cpp  pid_map.cpp  pid_scan.cpp  preload.js  quarantine.cpp  safe_document.py  scanengine.cpp  scanengine.h  simple_pid_screamer.cpp  simple_pid_screamer.h  suspicious_report.txt  test_capstone_5  test_capstone_5.cpp  testfile.md  threattypes.h  updated_capstone_5.cpp  (+3 more)
.github/workflows/: pipeline.yml
test_case_for_suspicious_strings/clean/: calculator.cpp  config_parser.js  logger.py
test_case_for_suspicious_strings/edge_cases/: commented_code.py  mixed_case.Sh  unicode.txt
test_case_for_suspicious_strings/malicious/: backdoor.sh  data_exfil.py  reverse_shell.txt
test_case_for_suspicious_strings/suspicious/: admin_script.sh  deploy.js  installer.py
test_case_for_suspicious_strings/whitelisted/: LICENSE  README.md  config.json
test_case_for_suspicious_strings/whitelisted/docs/: api.txt
test_case_for_suspicious_strings/whitelisted/test/: security_test.py
